trunk/Archive2/a9/86213dda77f390/output
main.cpp:14:7: error: redefinition of 'Just' as different kind of symbol
class Just : public Maybe<T>{
      ^
main.cpp:5:3: note: previous definition is here
  Just
  ^
main.cpp:24:7: error: redefinition of 'Nothing' as different kind of symbol
class Nothing : public Maybe<T>{
      ^
main.cpp:4:3: note: previous definition is here
  Nothing,
  ^
main.cpp:33:17: error: unexpected type name 'string': expected expression
  auto m = Just<string>(s); // error
                ^
3 errors generated.
